--- a/style.css
+++ b/style.css
@@ -35,3 +35,24 @@ footer {
 	color: #eee;
 	margin-top: 5%;
 }
+
+
+@media (max-width: 992px){
+	h1{
+	      margin: 250px 10px 100px;
+	}
+	
+	.dice1 {
+			padding-right: 100px;
+			margin-bottom: 600px;
+	}
+	
+	p{
+			font-size: 3rem;
+	}
+	
+	footer {
+			font-size: 2rem;
+	}
+
+}
