--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ footer {
 @media (max-width: 992px){
 	h1{
 	    margin: 250px 10px 100px;
+	    font-size: 9rem;
 	}
 	
 	.dice1 {
@@ -49,12 +50,16 @@ footer {
 	
 	p{
 		font-size: 3rem;
+		margin-bottom: 80px;
 	}
 	
 	footer {
 		font-size: 2rem;
 	}
-
+	
+	img {
+	width: 100%;
+}
 } 
 
 @media (min-width: 992px){
